syntax = "proto3";
package ie.gmit.ds;

option java_multiple_files = true;
option java_package = "ie.gmit.ds";
//option java_outer_classname = "password";

// The greeting service definition.
service password {
    // Sends

   // rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message
message hashRequest {
    string name = 1;
}

// The response message
message hashResponse {
    string message = 1;
}
// The Validate
message validateRequest {

}